- A new argument: constrain.modnegexp.  It is now possible to constrain
  the modified negative exponential function to non-negative values at
  infinity.
- Warn if fit is not all positive (backup methods will be used)
- Use simpler but equivalent rules for checking validity of ModNegExp fit
- Small optimizations (rep.int; save and reuse length of input)

File: redfit.R
--------------

- Use slightly faster .rowSums() instead of rowSums()
- Simplified arithmetic expressions in getdof(): no multiplying by 2
- Precomputed squared numbers in getdof()
- Fixed Welch, Hanning, Triangular and Blackman-Harris windows to
  be DFT-even
- Computed more precise values for the 6 dB bandwidths of each window,
  also for short windows.  Uniform sampling was assumed.
- Two internal functions moved to top level, previously inside print.redfit()

* CHANGES IN dplR VERSION 1.5.7

File: DESCRIPTION
-----------------

- Import gmp (>= 0.5-2)

File: NAMESPACE
---------------

- New imports from gmp and utils
- Export redfit() and runcrit()

Various .R files
----------------

- Check that length of vector does not overflow integer datatype
  before use of .C()
- Avoid possible name clashes when using foreach with parallel backends

File: common.interval.R
-----------------------

- Optimizations (for example, less subsetting of the 'rwl' data.frame)
- Better handling of corner cases (zero dimensions etc.)
- In the plot (make.plot = TRUE), length of lines was adjusted:
  First year a, last year b is 'b - a + 1' years, not 'b - a' years

File: corr.rwl.seg.R
--------------------

- New feature: allow the master series to be built from a second set of
  tree ring series by using a data.frame 'master' argument
- Replaced some for loops with cleaner vectorized operations or apply().

File: helpers.R
---------------

- Fixed a bug in fix.names(), related to creating unique short names.
  The bug affected read.tridas(), write.compact(), write.tridas() and